# linkml

./: -  .coveragerc  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  AI_COVENANT.md  ALUMNI.md  AUTHORS  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  ChangeLog  DOCGEN_COVERAGE_PLAN.md  Dockerfile  FIXES_APPLIED.md  LICENSE  LICENSE-Apache2.md  LICENSE-CCO.md  MANIFEST.in  Makefile  Migration.md  ModelChanges.md  Pipfile  README.html  README.md  SPECIFICATION.md  TEST_STRUCTURE.md  UML.md  checkout_outputs.sh  code.html  codecov.yml  conftest.py  context.jsonld  (+46 more)
.claude/: coverage.md  settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_modules/: index.html
_sources/: README.md.txt  ecosystem.md.txt  index.rst.txt  supplement-progress.md.txt
cli/: entrypoints.html  generate.html  index.html  linkml.html  lint.html  validate.html
code/: deprecation.html  index.html  metamodel.html  utils.html  validator.html
contributing/: contributing.html
data/: conversion.html  csvs.html  index.html  python.html  rdf.html  sql-databases.html  validating-data.html  working-with-data.html
developers/: contributing-code.html  deprecation.html  index.html  inference.html  loaders-and-dumpers.html  manage-releases.html  manipulating-schemas.html  notebooks.html  organization.html  schemabuilder.html  schemaview.html  sqlstore.html  tool-developer-guide.html  using-sql-dbs.html
docs/: AltDescription.md  Annotatable.md  Annotation.md  ClassDefinition.md  Definition.md  Element.md  EnumDefinition.md  Example.md  Extensible.md  Extension.md  LocalName.md  Makefile  PermissibleValue.md  Prefix.md  README.md  README.txt  SchemaDefinition.md  SlotDefinition.md  SubsetDefinition.md  TypeDefinition.md  abstract.md  alias.md  aliases.md  alt_description_source.md  alt_description_text.md  alt_descriptions.md  annotations.md  api.html  apply_to.md  attributes.md  authoring-schemas.html  base.md  broad_mappings.md  class-hierarchies.html  class_definition_apply_to.md  class_definition_is_a.md  class_definition_mixins.md  class_uri.md  classes.md  close_mappings.md  (+138 more)
examples/: README.md  organization-data.json  organization-data.jsonld  organization-data.nt  organization.context.jsonld  organization.graphql  organization.owl.ttl  organization.proto  organization.py  organization.schema.json  organization.shex  organization.yaml  prov-association.yaml
examples/PersonSchema/rust/: Cargo.toml  pyproject.toml
examples/PersonSchema/rust/src/: lib.rs  poly.rs  poly_containers.rs  serde_utils.rs
faq/: contributing.html  general.html  getting-help.html  index.html  modeling.html  python.html  tools.html  tricky_choices.html  why-linkml.html
generators/: bigquery.html  csv.html  dashboard.html  docgen.html  erdiagram.html  excel.html  graphql.html  index.html  java.html  json-schema.html  jsonld-context.html  jsonld.html  linkml.html  markdown.html  openapi.html  others.html  owl.html  pandera.html  plantumlgen.html  prefixgen.html  prefixmap.html  project-generator.html  protobuf.html  pydantic.html  python.html  rdf.html  rust.html  shacl.html  shex.html  sparql.html  sqlalchemy.html  sqlddl.html  sqltable.html  sqlvalidation.html  sssom.html  terminusdb.html  typedb.html  typescript.html  yaml.html  yarrrml.html  (+1 more)
get-involved/: Community-Meetings.html  index.html  office-hours.html  workshops-and-presentations.html
howtos/: collaborative-development.html  deprecating-elements.html  generate-ai-prompts.html  implements-instantiates-guide.html  index.html  linkml-project-cookiecutter.html  linkml-project-copier.html  linkml-ws.html  make-a-new-project.html  manage-releases.html  model-measurements.html  model-property-graphs.html  multidimensional-arrays.html  ontologies-as-values.html  port-linkml.html  recognize-structural-forms.html  skip-logic.html  using-jsonld.html  yq-for-schemas.html
icbo2022_schemasheets/: icbo2022_schemasheets.Makefile
includes/: annotations.context.jsonld  annotations.jsonld  annotations.py  extensions.context.jsonld  extensions.jsonld  extensions.py  extensions.yaml  mappings.context.jsonld  mappings.jsonld  mappings.py  types.context.jsonld  types.jsonld  types.py
intro/: install.html  overview.html  tutorial.html  tutorial01.html  tutorial02.html  tutorial03.html  tutorial04.html  tutorial05.html  tutorial06.html  tutorial07.html  tutorial08.html  tutorial09.html  tutorial10.html
linkml/: __init__.py  _version.py  meta.py  monkeypatch.py  pyproject.toml
maintainers/: code-of-conduct.html  codeowners.html  contributing.html  contributor-hierarchy.html  deprecation.html  generator-governance.html  index.html  organization.html
notebooks/: DistributedModels.ipynb  SQL-examples.ipynb  ShExPrimerModel.ipynb  Type-Designators.ipynb  context_issue.ipynb  enumerations.ipynb  examples.ipynb
schemas/: advanced.html  annotations.html  arrays.html  common.yaml  compound-keys.html  constraints.html  derived-models.html  enums.html  experimental.html  expression-language.html  generators.html  imports.html  index.html  inheritance.html  inlining.html  install.html  linter.html  metadata.html  metamodel-versions.html  metamodel.html  models.html  python.html  python.yaml  slots.html  subsets.html  type-designators.html  uris-and-mappings.html
scripts/: generate_dashboard.py  generate_pydantic_metamodel.py
semantics/: Makefile  README.md  linkml.pro
sparql/: README.md  domain-check.rq  meta-sparql.sh  required-slot-check.rq  schema-element-list.rq  schema-mapping-list.rq  schema-slot-inferred-class-range.rq  undefined-slot-check.rq  untyped-instance-check.rq
specifications/: linkml-spec.html
sphinx/: Makefile  README.md  authoring-schemas.md  code.rst  conf.py  ecosystem.md  examples.md  glossary.rst  index.rst  linkml.rst  linkml.utils.rst  links.rst
tests/: __init__.py  conftest.py  environment.py  newmodel.sh  test_config.ini.example
(+7958 files in other folders)
