[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "linkml"
description = "Linked Open Data Modeling Language"
authors = [
  {name = "Chris Mungall", email = "cjmungall@lbl.gov"},
  {name = "Sierra Moxon", email = "smoxon@lbl.gov"},
  {name = "Harold Solbrig", email = "solbrig@jhu.edu"},
  {name = "Sujay Patil", email = "spatil@lbl.gov"},
  {name = "Harshad Hegde", email = "hhegde@lbl.gov"},
  {name = "Mark Andrew Miller", email = "MAM@lbl.gov>"},
  {name = "Deepak Unni"},
  {name = "Gaurav Vaidya", email = "gaurav@renci.org>"},
  {name = "Kevin Schaper", email = "kevin@tislab.org>"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
homepage = "https://linkml.io/"
repository = "https://github.com/linkml/linkml"
documentation = "https://linkml.io/linkml/"
readme = "README.md"
keywords = ["schema", "linked data", "data modeling", "rdf", "owl", "biolink"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = ["linkml"]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [  # Specifier syntax: https://peps.python.org/pep-0631/
    "antlr4-python3-runtime >= 4.9.0, < 4.10",
    "click >= 7.0",
    "graphviz >= 0.10.1",
    "hbreader",
    "isodate >= 0.6.0",
    "jinja2 >= 3.1.0",
    "jsonasobj2 >= 1.0.3, < 2.0.0",
    "jsonschema[format] >= 4.0.0",
    "linkml-runtime >= 1.9.3, < 2.0.0",
    "openpyxl",
    "parse",
    "prefixcommons >= 0.1.7",
    "prefixmaps >= 0.2.2",
    "pydantic >= 1.0.0, < 3.0.0",
    "pyjsg >= 0.11.6",
    "pyshex >= 0.7.20",
    "pyshexc >= 0.8.3",
    "python-dateutil",
    "pyyaml",
    "rdflib >=6.0.0",
    "requests >= 2.22",
    "sqlalchemy >= 1.4.31",
    "watchdog >= 0.9.0",
    "typing-extensions >= 4.6.0; python_version < '3.12'",
    "sphinx-click (>=6.0.0)",
    "pandera[pandas] (>=0.24.0,<0.25.0)",
]

[project.optional-dependencies]
black = [
    "black >= 24.0.0",
]
numpydantic = [
    "numpydantic >= 1.6.1",
]
shacl = [
    "pyshacl >= 0.25.0",
]
tests = [
    # "linkml[black]",  # recursive dependency not supported by poetry
    "black >= 24.0.0",
    "numpydantic >= 1.6.1",
    "pyshacl >= 0.25.0",
]
pandera = [
  "pandera >= 0.19.0"
]
polars-lts-cpu = [
  "polars-lts-cpu >= 1.0.0"
]

[project.scripts]
linkml = "linkml.cli.main:linkml"
gen-jsonld-context = "linkml.generators.jsonldcontextgen:cli"
gen-prefix-map = "linkml.generators.prefixmapgen:cli"
gen-csv = "linkml.generators.csvgen:cli"
gen-graphviz = "linkml.generators.dotgen:cli"
gen-golang = "linkml.generators.golanggen:cli"
gen-golr-views = "linkml.generators.golrgen:cli"
gen-graphql = "linkml.generators.graphqlgen:cli"
gen-java = "linkml.generators.javagen:cli"
gen-jsonld = "linkml.generators.jsonldgen:cli"
gen-json-schema = "linkml.generators.jsonschemagen:cli"
gen-markdown = "linkml.generators.markdowngen:cli"
gen-dbml = "linkml.generators.dbmlgen:cli"
gen-doc = "linkml.generators.docgen:cli"
gen-namespaces = "linkml.generators.namespacegen:cli"
gen-owl = "linkml.generators.owlgen:cli"
gen-plantuml = "linkml.generators.plantumlgen:cli"
gen-proto = "linkml.generators.protogen:cli"
gen-py-classes = "linkml.generators.pythongen:cli"
gen-python = "linkml.generators.pythongen:cli"
gen-pydantic = "linkml.generators.pydanticgen:cli"
gen-pandera = "linkml.generators.panderagen:cli"
gen-rdf = "linkml.generators.rdfgen:cli"
gen-shex = "linkml.generators.shexgen:cli"
gen-shacl = "linkml.generators.shaclgen:cli"
gen-sparql = "linkml.generators.sparqlgen:cli"
gen-typescript = "linkml.generators.typescriptgen:cli"
gen-terminusdb = "linkml.generators.terminusdbgen:cli"
gen-yuml = "linkml.generators.yumlgen:cli"
gen-yaml = "linkml.generators.yamlgen:cli"
gen-erdiagram = "linkml.generators.erdiagramgen:cli"
gen-sqla = "linkml.generators.sqlalchemygen:cli"
gen-sqlddl = "linkml.generators.sqltablegen:cli"
gen-sqltables = "linkml.generators.sqltablegen:cli"
gen-summary = "linkml.generators.summarygen:cli"
gen-project = "linkml.generators.projectgen:cli"
run-tutorial = "linkml.utils.execute_tutorial:cli"
linkml-convert = "linkml.utils.converter:cli"
linkml-lint = "linkml.linter.cli:main"
linkml-sqldb = "linkml.utils.sqlutils:main"
linkml-validate = "linkml.validator.cli:cli"
linkml-jsonschema-validate = "linkml.validators.jsonschemavalidator:cli"
linkml-sparql-validate = "linkml.validators.sparqlvalidator:cli"
linkml-run-examples = "linkml.workspaces.example_runner:cli"
gen-excel = "linkml.generators.excelgen:cli"
gen-sssom = "linkml.generators.sssomgen:cli"
gen-linkml = "linkml.generators.linkmlgen:cli"
gen-mermaid-class-diagram = "linkml.generators.mermaidclassdiagramgen:cli"
linkml-schema-fixer = "linkml.utils.schema_fixer:main"

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.8.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
chardet = "*"
ipykernel = "*"
ipython-genutils = "*"
jupyter = "*"
nbconvert = "*"
nbformat = "*"
coverage = "^6.4.1"
tox = "^4"
requests-cache = "^1.2.0"
myst-nb = {version=">=1.0.0", python=">=3.9"}
sphinx-design = "^0.5.0"
rich = "^13.7.1"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
pytest-subtests = "^0.11.0"
pytest-xdist = "^3.6.1"
numpy = [
  { "version" = ">=1.24.3", "python" = "<3.12" },
  { "version" = ">=1.25.2", "python" = ">=3.12" }
]
requests-cache = "^1.2.0"
mock = "^5.1.0"
testcontainers = "3.7.1"
jsonpatch = "^1.33"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = {version = "^2023.03.27", extras = ["docs"]}
sphinxcontrib-mermaid = {version = "^0.7.1", extras = ["docs"]}
sphinx = "*"
sphinx-click = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"
matplotlib = ">=3.7"
sphinx-jinja = "^2.0.2"
sphinxcontrib-programoutput = "^0.17"

[tool.codespell]
skip = [
  ".git", "*.pdf", "*.svg", "*.dill",
  "./tests",  # TODO: bring in tests in too
  "pyproject.toml",
  "poetry.lock",
  "./notebooks/DistributedModels.ipynb",
  "./docs/LinkML-logo/LinkML-Revised-Round-Logo-MASTER-FILE.ai"
]
# Ignore table where words could be split across rows
ignore-regex = '(\|.*\|.*\|.*\||\[[A-Z][a-z]\][a-z][a-z])'
# Instead of a comma-seperated single string,  a toml list may be used (as for "skip" above)
ignore-words-list = 'anc,mater,connexion,infarction,thirdparty,linke'
quiet-level = 3

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
force-exclude = '''
/(
  # default exclude
  \.direnv|\.eggs|\.git|\.hg|\.ipynb_checkpoints|\.mypy_cache|\.nox|\.pytest_cache|\.ruff_cache|\.tox|\.svn|\.venv|\.vscode|__pypackages__|_build|buck-out|build|dist|venv
  # additional exclude
  | tests.*/output
  | __snapshots__
  | docs
  | examples
  | notebooks
  | linkml/linter/config/datamodel
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
  # https://github.com/RDFLib/rdflib/issues/1830
  "ignore:.*_pytestfixturefunction is not defined in namespace:UserWarning"
]
markers = [
  "network: mark tests that make external network requests",
  "slow: mark test as slow to run",
  "no_asserts: tests that don't have meaningful asserts, but are only snapshot comparisons, or historically had print statements, or other non-erroring behavior",
  "strcmp: tests that compare stringified values rather than the values themselves",
  "biolink: tests that validate that the biolink model is unchanged",
  "docker: tests that require a running docker server",
  "plantumlgen: Tests for the plantuml generator",
  "pydanticgen_split: Split module generation in pydanticgen",
  "pydanticgen_npd: tests for the numpydantic array generator",
  "panderagen: tests for the pandera generator",
  "pythongen: Tests for python generator",
  "pydanticgen: Tests for pydantic generator",
  "javagen: Tests for java generator",
  "jsonschemagen: Tests for Json Schema generator",
  "shaclgen: Tests for shacl generator",
  "shexgen: Tests for shex generator",
  "jsonldgen: Test for JSON-LD generator",
  "jsonldcontextgen: Test for JSON-LD context generator",
  "rdfgen: Tests for the RDFGenerator",
  "sqlalchemygen: Tests for SQL Alchemy generator",
  "sqlddlgen: Tests for SQL DDL generator",
  "sqlddlpostgresgen: Tests for SQL DDL postgres generator",
  "owlgen: Tests for OWL generator",
  "yamlgen: Tests for the YAML generator"
]

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
extend-exclude = [
    "tests/output",
    "tests/**/output",
    "tests/**/__snapshots__",
    "examples/",
    "docs/",
    "notebooks/"
]
force-exclude = true
line-length = 120
# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
extend-ignore = ["E203"]
select = [
  "E",  # pycodestyle errors
  "F",  # Pyflakes
  "I",  # isort
  "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# These templates can have long lines
"linkml/generators/sqlalchemy/sqlalchemy_declarative_template.py" = ["E501"]
"linkml/generators/sqlalchemy/sqlalchemy_imperative_template.py" = ["E501"]
"linkml/linter/config/datamodel/config.py" = ["E501", "F401", "I001"]

# Notebooks can have unsorted imports
"tests/test_notebooks/input/*" = ["E402"]

[tool.tox]
requires = ["tox>=4"]
env_list = ["lint", "py{39,310,311,312,313}"]

[tool.tox.env_run_base]
allowlist_externals = ["poetry"]
deps = ["pytest"]
commands = [
  ["poetry", "install", "--no-root", "--sync", "--all-extras"],
  ["poetry", "run", "pytest", "{posargs}"],
]

[tool.tox.env.codespell]
description = "Run spell checkers."
skip_install = true
deps = [
  "codespell",
  "tomli", # required for getting config from pyproject.toml
]
commands = [
  ["codespell", "{posargs}"]
]

[tool.tox.env.format]
description = "Run code formatter and code-fixing linter."
skip_install = true
deps = ["pre-commit"]
commands = [
  ["pre-commit", "run", "--all-files", "--show-diff-on-failure", { replace = "posargs", extend = true }]
]

[tool.tox.env.lint]
description = "Run code linter (no fixes)."
skip_install = true
deps = ["black", "ruff==0.4.8"]
commands = [
  ["ruff", "check", "{posargs:.}"],
  ["black", "--check", "--diff", "{posargs:.}"],
]
