[metadata]
name = linkml
url = https://github.com/linkml/linkml
author = Harold Solbrig
author_email = solbrig@jhu.edu
summary = Linked Open Data Modeling Language
home_page = http://linkml.github.io/linkml
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    biolink
    metamodel

[files]
packages =
    linkml
    includes


[entry_points]
console_scripts =
    gen-jsonld-context = linkml.generators.jsonldcontextgen:cli
    gen-prefix-map = linkml.generators.prefixmapgen:cli
    gen-csv = linkml.generators.csvgen:cli
    gen-graphviz = linkml.generators.dotgen:cli
    gen-golr-views = linkml.generators.golrgen:cli
    gen-graphql = linkml.generators.graphqlgen:cli
    gen-jsonld = linkml.generators.jsonldgen:cli
    gen-json-schema = linkml.generators.jsonschemagen:cli
    gen-markdown = linkml.generators.markdowngen:cli
    gen-prolog = linkml.generators.lpgen:cli
    gen-namespaces = linkml.generators.namespacegen:cli
    gen-owl = linkml.generators.owlgen:cli
    gen-proto = linkml.generators.protogen:cli
    gen-py-classes = linkml.generators.pythongen:cli
    gen-python = linkml.generators.pythongen:cli
    gen-rdf = linkml.generators.rdfgen:cli
    gen-shex = linkml.generators.shexgen:cli
    gen-terminusdb = linkml.generators.terminusdbgen:cli
    gen-yuml = linkml.generators.yumlgen:cli
    gen-yaml = linkml.generators.yamlgen:cli
    gen-sqlddl = linkml.generators.sqlddlgen:cli
    gen-project = linkml.generators.projectgen:cli
    linkml-convert = linkml.utils.datautils:cli
    linkml-validate = linkml.utils.validation:cli

