[package]
name = "personinfo"
version = "0.0.0"
edition = "2021"

[lib]
name = "personinfo"
crate-type = ["lib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["chrono"]  , optional = true  }
serde = { version = "1.0", features = ["derive"]  , optional = true  }
serde-value = "0.7.0"
serde_yml = { version = "0.0.12", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }
chrono = { version = "0.4.41", features = ["serde"]  }


[features]
default = []
pyo3 = ["dep:pyo3"]
serde = ["dep:serde", "dep:serde_yml", "dep:serde_path_to_error"]
